<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:padding="44dp"
    tools:context=".SignupActivity">

    <!-- start text create account -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/text_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputName">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create an account"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#131B25"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your credentials to continue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#6B6565"/>

    </LinearLayout>
    <!-- end text create account -->


    <!-- start input name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/inputName"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/labelName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:autofillHints="name"
            android:id="@+id/signupName"
            android:padding="14dp"/>
    </LinearLayout>
    <!-- end input name -->

    <!-- start input phone number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/inputPhoneNumber"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:id="@+id/labelPhoneNumber" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:autofillHints="phone"
            android:id="@+id/signupPhoneNumber"
            android:inputType="phone"
            android:padding="14dp"/>
    </LinearLayout>
    <!-- start input phone number -->

    <!-- start input email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:id="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPhoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/labelEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:id="@+id/signupEmail"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="14dp"/>
    </LinearLayout>
    <!-- end input email -->

    <!-- start input password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:id="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/labelPassword" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:id="@+id/signupPassword"
            android:padding="14dp"/>
    </LinearLayout>
    <!-- end input password -->

    <!-- start button signup -->
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupButton"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginRedirect"/>
    <!-- end button signup -->

    <!-- start already registered -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginRedirect"
        android:text="Already Registered? Login"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#6B6565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"/>
    <!-- end already registered -->

</androidx.constraintlayout.widget.ConstraintLayout>