<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CookingTechniquesActicity">

    <LinearLayout
        android:id="@+id/backLabelTechniques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contentTechniques">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/backButtonTechniques"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                android:contentDescription="Back"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/labelTitleTechniques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title_techniques"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#93C47D" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentTechniques"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backLabelTechniques"
        app:layout_constraintBottom_toTopOf="@id/descriptionAndMethod"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageTechniques"
            android:src="@drawable/deepfrying"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/descriptionAndMethod"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTechniques"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:id="@+id/labelDescription"
                        android:text="@string/label_description"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/contentDescription"
                        android:text="@string/content_description"
                        android:textSize="13sp"
                        android:justificationMode="inter_word"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/LabelMethod"
                        android:text="@string/label_method"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/methodDescriptionTechniques"
                        android:text="@string/deep_frying_steps"
                        android:textSize="13sp"
                        />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>